
2016-03-21  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cob_set_location, cob_trace_section, cob_exit_common): fix for
	  bug #216 - store a duplicate of cob_last_sfile for tracing, free on exit

2016-03-13  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* intrinsic.c (locale_time): consolidation still used sizeof(buff) after
	  buff changed from char [] to char *, fixed by introducing LOCTIME_BUFSIZE
	* intrinsic.c (cob_intr_lcl_time_from_secs) re-added missing exception

2016-03-12  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: consolidated copy-and-pasted code in numerous functions,
	  including: SUBSTITUTE(-CASE), NUMVAL(-C), VARIANCE and
	  LOCALE-TIME(-FROM-SECONDS).
	* intrinsic.c: renamed "xqtyear" variables to "current_year".

2016-02-21  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (set_config_val): removed use of cob_strcat for output of
	  possible values

2016-02-17  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (set_default_line_column): fixed bug #202 where screens
	  were displayed at the cursor position when no LINE or COL was given.

2016-01-31  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* intrinsic.c (split_around_t): fixed stack overflow occuring in wrong
	  date/datetime format strings for FUNCTION TEST-FORMATTED-DATETIME
	* intrinsic.c: changed definition of string lengths for date/time
	  according to existing ones (COB_xyz_BUFF)
	* common.h [_MSC_VER]: adding alias for setenv/unsetenv fixing small memory
	  leak for calls of (putenv) - _MSC duplicates the string, POSIX does not

2016-01-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* general: fixing all warnings generated by msc code analysis
	  (possible memory related issues)
	* common.c (cob_rescan_env_vals): always remove invalid settings from env.
	* common.c (cob_realloc): new, combining cob_malloc, cob_free and memcpy